--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
-    <link href="input copy.css" rel="stylesheet" />
-    <link href="side3 copy.css" rel="stylesheet" />
+    <link href="input copy1.css" rel="stylesheet" />
+    <link href="side3 copy1.css" rel="stylesheet" />
 
     <link href="side3.css" rel="stylesheet" />
 
