--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="navi-section">
         <div class="headline-top">
           <div class="headline-right">
-            <div class="text-head">Home</div>
+            <div class="text-head">Brewing Bacteria</div>
           </div>
           <div class="navbar">
             <button class="text-head" onclick="side2()">Projekt</button>
