--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
       <section class="snap-section">
         <div class="side3">
           <div class="gallery3">
-            <img src="Neuer Ordner/044f7d160bb4deb2ac11b67296dec8c1.jpg" alt="Gallery 1" />
-            <img src="Neuer Ordner/0aa85dc46fa64fa39a44b35970f12cb8.jpg" alt="Gallery 1" />
-            <img src="Neuer Ordner/1. man with tounge .jpg" alt="Gallery 3" />
-            <img src="Neuer Ordner/1b607b3f01e06430cb8f923cd2d9dd09.jpg" alt="Gallery 4" />
-            <img src="Neuer Ordner/2. man with toilet.jpg" alt="Gallery 5" />
-            <img src="Neuer Ordner/2.png" alt="Gallery 6" />
-            <img src="Neuer Ordner/3. man on floor.jpg" alt="Gallery 7" />
-            <img src="Neuer Ordner/3.png" alt="Gallery 8" />
-            <img src="Neuer Ordner/32230b8a772ad06c7fcfab94fccfd9e4.jpg" alt="Gallery 9" />
-            <img src="Neuer Ordner/4. man holding.jpg" alt="Gallery 10" />
-            <img src="Neuer Ordner/4.png" alt="Gallery 11" />
-            <img src="Neuer Ordner/41e402b73faa179eaa61720ba5881c09.jpg" alt="Gallery 12" />
-            <img src="Neuer Ordner/e2183988c6191b6314e7e7a05f42cba6.jpg" alt="Gallery 13" />
-            <img src="Neuer Ordner/5.png" alt="Gallery 14" />
-            <img src="Neuer Ordner/6. woman hugging.jpg" alt="Gallery 15" />
-            <img src="Neuer Ordner/6.png" alt="Gallery 16" />
-            <img src="Neuer Ordner/6585b1f469a25e8cceca4ec53373ec7b.jpg" alt="Gallery 17" />
-            <img src="Neuer Ordner/7. jumping over woman.jpg" alt="Gallery 18" />
-            <img src="Neuer Ordner/85f19d082ed60d1296d5a0a206670a16.jpg" alt="Gallery 19" />
-            <img src="Neuer Ordner/nereid-ndreu-5F1dhADm__o-unsplash.jpg" alt="Gallery 20" />
+            <img src="044f7d160bb4deb2ac11b67296dec8c1.jpg" alt="Gallery 1" />
+            <img src="0aa85dc46fa64fa39a44b35970f12cb8.jpg" alt="Gallery 1" />
+            <img src="1. man with tounge .jpg" alt="Gallery 3" />
+            <img src="1b607b3f01e06430cb8f923cd2d9dd09.jpg" alt="Gallery 4" />
+            <img src="2. man with toilet.jpg" alt="Gallery 5" />
+            <img src="2.png" alt="Gallery 6" />
+            <img src="3. man on floor.jpg" alt="Gallery 7" />
+            <img src="3.png" alt="Gallery 8" />
+            <img src="32230b8a772ad06c7fcfab94fccfd9e4.jpg" alt="Gallery 9" />
+            <img src="4. man holding.jpg" alt="Gallery 10" />
+            <img src="4.png" alt="Gallery 11" />
+            <img src="41e402b73faa179eaa61720ba5881c09.jpg" alt="Gallery 12" />
+            <img src="e2183988c6191b6314e7e7a05f42cba6.jpg" alt="Gallery 13" />
+            <img src="5.png" alt="Gallery 14" />
+            <img src="6. woman hugging.jpg" alt="Gallery 15" />
+            <img src="6.png" alt="Gallery 16" />
+            <img src="6585b1f469a25e8cceca4ec53373ec7b.jpg" alt="Gallery 17" />
+            <img src="7. jumping over woman.jpg" alt="Gallery 18" />
+            <img src="85f19d082ed60d1296d5a0a206670a16.jpg" alt="Gallery 19" />
+            <img src="nereid-ndreu-5F1dhADm__o-unsplash.jpg" alt="Gallery 20" />
           </div>
         </div>
       </section>
